# meta-ev

./: .gitignore  Dockerfile  README.md  app.py  compare_agents.py  evaluate.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  server.py  test_eval.py
agents/: __init__.py  baseline_agent.py  rl_agent.py
data/: jobs.json
env/: __init__.py  environment.py  models.py
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
