[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta_ev_jobapply"
version = "1.0.0"
description = "Interactive Job Application Environment for RL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Jayanth Kolli" }
]
dependencies = [
    "gradio>=5.5.0",
    "fastapi",
    "uvicorn",
    "openenv-core",
    "pyyaml",
    "pandas",
    "matplotlib",
    "huggingface_hub>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.uv]
managed = true
package = true
